--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,30 @@
+absl-py==0.8.1
 amqp==2.5.1
+astor==0.8.0
 billiard==3.6.1.0
 celery==4.3.0
+gast==0.3.2
+google-pasta==0.1.8
+grpcio==1.24.3
+h5py==2.10.0
 importlib-metadata==0.23
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 kombu==4.6.3
+Markdown==3.1.1
 more-itertools==7.2.0
 numpy==1.17.3
+Pillow==6.2.1
+protobuf==3.10.0
 pymongo==3.9.0
 pytz==2019.3
 redis==3.3.11
+six==1.12.0
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+termcolor==1.1.0
 vine==1.3.0
+Werkzeug==0.16.0
+wrapt==1.11.2
 zipp==0.6.0
