--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ google-pasta==0.1.8
 grpcio==1.24.3
 h5py==2.10.0
 importlib-metadata==0.23
+Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kombu==4.6.3
@@ -18,7 +19,9 @@ Pillow==6.2.1
 protobuf==3.10.0
 pymongo==3.9.0
 pytz==2019.3
+PyYAML==5.1.2
 redis==3.3.11
+scipy==1.3.1
 six==1.12.0
 tensorboard==1.14.0
 tensorflow==1.14.0
